--- a/smart.html
+++ b/smart.html
@@ -31,8 +31,8 @@
  <br />
    <input class="submit" type="button" value="Submit" onclick="genomic()" />
   <p id = "result" > Result:     </p>
-  <input type="button" onclick="myfunction2()" value="Reset Results"
-   <input type="button" onclick="myFunction()" value="Reset form">
+  <input type="button" onclick="myfunction2()" value="Reset Results" />
+   <input type="button" onclick="myFunction()" value="Reset form" />
 </form>
 <h2><strong>Disclaimer:</strong></h2>
 <p>The results derived here are only for research purposes, this is not to be used for diagnosis. A diagnosis is only made by a clinician in conjunction with approved diagnostic tests, a physical examination, and medical history.</p>
@@ -85,8 +85,4 @@ document.addEventListener("keydown", function(e){
   document.getElementById("myForm").reset();
 }
 </script>
-<script> 
-  function myFunction2(){ 
-    document.getElementById('result').reset(); 
-  } 
-</script>  
+
