--- a/smart.html
+++ b/smart.html
@@ -86,3 +86,8 @@ document.addEventListener("keydown", function(e){
 }
 </script>
 
+<script>
+  function myFunction2() {
+  document.getElementById("result").reset();
+}
+</script>
