--- a/About.html
+++ b/About.html
@@ -297,9 +297,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <li><p>Understanding of Various Lab processes such as Antibody Purification, Column Chromatography, Cell Culture, RNA Extraction, Polymerase Chain Reaction, Quantitative Polymerase Chain Reaction, Gel Electrophoresis, Cloning, miRNA Detection and Quantification</p></li>
             <li><p>Bioinformatics using Biopython package: doing Analysis of DNA sequences and Sequence alignment. </p></li>
             <li><p>Certified in Mental Health First Aid from the National Council for Behavioral Health</p></li>
-            <li><p>Advanced proficiency in HTML, CSS and Static Web Development</p></li>
-            <li><p>Proficient in Python Programming Language, Bash and Shell Scripting and JavaScript</p></li>
+            <li><p>Advanced proficiency in HTML, JavScript and Static Web Development</p></li>
+            <li><p>Proficient in Python Programming Language, and Cascading Style Sheets (CSS)</p></li>
             <li><p>Proficient in R Statistical Analysis Coding Language</p></li>
+            <li><p>Understanding of mySQL</p></li>
             <li><p>Conversational Bengali</p></lli>
             <li><p>Basic Spanish</p></li>
 
