--- a/smart.html
+++ b/smart.html
@@ -57,10 +57,10 @@ if (RPN_ct <= 38) {
 } else if (genomic >= 36 && genomic <= 40) { 
         document.getElementById("result").innerHTML = "Result:" + 'Sample is Negative for actively replicating SARS-CoV-2 Virus';
 } else if (genomic > 23 && genomic <= 35) {
-    if (fold >= 523823) { 
+    if (fold >= 1618756) { 
         document.getElementById('result').innerHTML = "Result: " + 'Sample is Positive for actively replicating SARS-CoV-2 Virus'; 
         
-} else if (fold < 523823) { 
+} else if (fold < 1618756) { 
         document.getElementById('result').innerHTML = "Result:" + 'Sample is Negative for actively replicating SARS-CoV-2 Virus. Sample is Positive for the presence of SARS-CoV-2 Virus.';
     } 
 }
