Updated with form reset ability

--- a/smart.html
+++ b/smart.html
@@ -82,6 +82,8 @@ document.addEventListener("keydown", function(e){
 <script>
   function myFunction() {
   document.getElementById("myForm").reset();
+  document.getElementById("result").innerHTML = "Result:";
+
 }
 </script>
 
