--- a/smart2.html
+++ b/smart2.html
@@ -83,7 +83,7 @@
                 document.getElementById("result").innerHTML = "Result: Sample is Negative for SARS-CoV-2";
             } else if (genomic >= 40 && subgenomic < 40) {
                 document.getElementById("result").innerHTML = "Result: Invalid run due to Inconsistency";
-            } else if (genomic >= 35) {
+            } else if (genomic >=  35) {
                 document.getElementById ("result").innerHTML = "Result: Sample is Negative for actively replicating SARS-CoV-2 Virus. Sample is Positive for presence of SARS-CoV-2 Virus";
             } else if (genomic >= 36 && genomic <= 40) {
                 document.get Eleme ntById("result").innerHTML = "Result: Sample is Negative for actively replicating SARS-CoV-2 Virus";
@@ -105,6 +105,10 @@
     function handleFile() {
         const fileInput = document.getElementById('fileInput');
         const file = fileInput.files[0];
+        if (!file) {
+            alert('Please select a file to upload.');
+            return;
+        }
         const reader = new FileReader();
         let readMethod;
 
@@ -158,7 +162,7 @@
                     } else if (genomic >= 35) {
                         results.push({id: patientId, genomic: genomic, subgenomic: subgenomic, RPN: RPN_ct, result: 'Sample is Negative for actively replicating SARS-CoV-2 Virus. Sample is Positive for presence of SARS-CoV-2 Virus'});
                     } else if (genomic >= 36 && genomic <= 40) {
-                        results.push({id: patientId, genomic: genomic, subgenomic: subgenomic, RPN: RPN_ct, result: 'Sample is Negative for actively replicating SARS-CoV-2 Virus'});
+                        results.push({id: patientId, genomic: genomic, subgenomic: subgenomic, RPN: RPN_ct , result: 'Sample is Negative for actively replicating SARS-CoV-2 Virus'});
  } else if (genomic > 23 && genomic <= 35) {
                         if (fold >= 1618756) {
                             results.push({id : patientId, genomic: genomic, subgenomic: subgenomic, RPN: RPN_ct, result: 'Sample is Positive for actively replicating SARS-CoV-2 Virus '});
